--- a/server/package.json
+++ b/server/package.json
@@ -11,15 +11,22 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
+    "@types/uuid": "^9.0.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
     "@prisma/client": "^4.15.0",
+    "aws-sdk": "^2.1388.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^4.15.0",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "uuid": "^9.0.0"
   }
 }
