--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "aws-sdk": "^2.1388.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
